# agent-orchestrator

./: .env.example  .env.example.advanced  .gitignore  AGENTS.md  README.md  pyproject.toml  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml
.streamlit/: config.toml
analytics-db/init/: 01-schema.sql
docs/: architecture.md  configuration.md  observability.md  security.md  state-machine.md  workflow.md
orchestrator/: __init__.py  agents.py  analytics.py  analytics_read.py  analytics_sync.py  base_sync.py  branch_publication.py  config.py  dashboard.py  dashboard_charts.py  dashboard_html.py  dashboard_kpis.py  dashboard_state.py  dashboard_theme.py  git_plumbing.py  github.py  main.py  scheduler.py  skill_catalog.py  state_machine.py  trajectory_dashboard.py  trajectory_reader.py  usage.py  verify.py  workflow.py  workflow_drift.py  workflow_messages.py  worktree_lifecycle.py  worktrees.py
orchestrator/analytics/: __init__.py  read.py  read_dashboard.py  read_models.py  read_raw.py  read_rollup.py  sync.py
orchestrator/stages/: __init__.py  conflicts.py  decomposition.py  documenting.py  fixing.py  in_review.py  (+3 more)
plans/: analytics-sync-performance.md  context-monitoring.md  dashboard-load-optimization.md  review-stages-lifecycle.md  roadmap.md  skill-trigger-tracking.md  symphony-spec-review.md  test-coverage-audit.md
tests/: analytics_read_helpers.py  conftest.py  fakes.py  test_agents.py  test_analytics.py  test_analytics_read.py  test_analytics_read_breakdowns.py  test_analytics_read_conn_reuse.py  test_analytics_read_connection_lifecycle.py  test_analytics_read_data_extent.py  test_analytics_read_db_url.py  test_analytics_read_errors.py  test_analytics_read_filter_options.py  test_analytics_read_filters.py  test_analytics_read_heatmap.py  test_analytics_read_raw_keeps.py  test_analytics_read_rollup_cutover.py  test_analytics_read_summary.py  test_analytics_read_tables.py  test_analytics_read_throughput.py  test_analytics_schema.py  test_analytics_sync.py  test_config.py  test_dashboard.py  test_dashboard_charts.py  test_dashboard_theme.py  test_main.py  test_scheduler.py  test_skill_catalog.py  test_state_machine.py  test_trajectory_dashboard.py  test_trajectory_reader.py  test_usage.py  test_workflow.py  test_workflow_agent_analytics.py  test_workflow_backlog_routing.py  test_workflow_base_sync_real_git.py  test_workflow_base_sync_unit.py  test_workflow_branch_publication.py  test_workflow_cleanup.py  (+66 more)
(+2 files in other folders)
