# Copyright 2026 Geser Dugarov
# SPDX-License-Identifier: Apache-2.0
[project]
name = "agent-orchestrator"
version = "0.2.0"
description = "GitHub-Issue-driven AI agent workflow."
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = ["PyGithub>=2.1", "psycopg[binary]>=3.3.3"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]
# Streamlit, Plotly, and Streamlit's transitive pandas are only needed
# by the analytics dashboard (`orchestrator/dashboard.py`, the chart
# builders in `orchestrator/dashboard_charts.py`, and the theme tokens
# in `orchestrator/dashboard_theme.py`). They are deliberately NOT in
# the default `dev` group so `uv sync --locked` keeps installing the
# orchestrator's runtime + tests minimal; install with
# `uv sync --group dashboard` before running `streamlit run`.
dashboard = ["streamlit>=1.30", "plotly>=5.20"]

[tool.ruff.lint]
# `l` is used pervasively as a loop variable over GitHub labels; banning it
# would force noise-only renames across the codebase.
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"tests/test_workflow.py" = ["F401", "F541", "F821", "F841"]
